Modified scaling_operator(data, quantile_val), now I know scaling works properly

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -332,16 +332,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(9.850000000000001)"
+       "array([9.94, 2.98])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
    "source": [
     "# Using np.quantile\n",
     "\n",
-    "np.quantile(ar, 0.99)"
+    "np.quantile(ar, 0.99, axis=1 )"
    ]
   },
   {
@@ -361,13 +361,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scaling_operator(data, quantile_val):\n",
     "\n",
-    "    scaling_factor = np.quantile(data, quantile_val)\n",
+    "    upper_limit = 10\n",
+    "\n",
+    "    scaling_factor = np.quantile(data, quantile_val)/upper_limit\n",
     "    scaled_data  = data/scaling_factor\n",
     "\n",
     "    return scaled_data, scaling_factor\n",
@@ -383,17 +385,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scaled array (ar_scaled): [[1.01522843 0.7106599  0.40609137]\n",
-      " [0.30456853 0.20304569 0.10152284]]\n",
+      "Scaled array (ar_scaled): [[10.15228426  7.10659898  4.06091371]\n",
+      " [ 3.04568528  2.03045685  1.01522843]]\n",
       "\n",
-      "Scaling factor: 9.850000000000001\n"
+      "Scaling factor: 0.9850000000000001\n"
      ]
     }
    ],
@@ -413,26 +415,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scaling factor: 5.9578705\n"
+      "Scaling factor: 0.25283724\n"
      ]
     }
    ],
    "source": [
-    "trajectories_ = scaling_operator(trajectories, 0.99)\n",
+    "trajectories_ = scaling_operator(trajectories, 0.9)\n",
     "trajectories_scaled = trajectories_[0]\n",
     "print('Scaling factor:', trajectories_[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -484,36 +486,36 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.159439</td>\n",
-       "      <td>0.174664</td>\n",
+       "      <td>3.757031</td>\n",
+       "      <td>4.115786</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.124298</td>\n",
-       "      <td>0.130842</td>\n",
+       "      <td>2.928965</td>\n",
+       "      <td>3.083177</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.114512</td>\n",
-       "      <td>0.094730</td>\n",
+       "      <td>2.698359</td>\n",
+       "      <td>2.232228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.120290</td>\n",
-       "      <td>0.068421</td>\n",
+       "      <td>2.834528</td>\n",
+       "      <td>1.612280</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
-       "      <td>0.138390</td>\n",
-       "      <td>0.050401</td>\n",
+       "      <td>3.261036</td>\n",
+       "      <td>1.187654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -526,36 +528,36 @@
        "      <th>99995</th>\n",
        "      <td>999</td>\n",
        "      <td>95</td>\n",
-       "      <td>0.151321</td>\n",
-       "      <td>0.097253</td>\n",
+       "      <td>3.565728</td>\n",
+       "      <td>2.291671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99996</th>\n",
        "      <td>999</td>\n",
        "      <td>96</td>\n",
-       "      <td>0.160716</td>\n",
-       "      <td>0.090478</td>\n",
+       "      <td>3.787127</td>\n",
+       "      <td>2.132025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99997</th>\n",
        "      <td>999</td>\n",
        "      <td>97</td>\n",
-       "      <td>0.173965</td>\n",
-       "      <td>0.086543</td>\n",
+       "      <td>4.099317</td>\n",
+       "      <td>2.039314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99998</th>\n",
        "      <td>999</td>\n",
        "      <td>98</td>\n",
-       "      <td>0.189533</td>\n",
-       "      <td>0.085705</td>\n",
+       "      <td>4.466160</td>\n",
+       "      <td>2.019556</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99999</th>\n",
        "      <td>999</td>\n",
        "      <td>99</td>\n",
-       "      <td>0.205392</td>\n",
-       "      <td>0.088117</td>\n",
+       "      <td>4.839878</td>\n",
+       "      <td>2.076386</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -564,22 +566,22 @@
       ],
       "text/plain": [
        "       system_id  time_step      prey  predator\n",
-       "0              0          0  0.159439  0.174664\n",
-       "1              0          1  0.124298  0.130842\n",
-       "2              0          2  0.114512  0.094730\n",
-       "3              0          3  0.120290  0.068421\n",
-       "4              0          4  0.138390  0.050401\n",
+       "0              0          0  3.757031  4.115786\n",
+       "1              0          1  2.928965  3.083177\n",
+       "2              0          2  2.698359  2.232228\n",
+       "3              0          3  2.834528  1.612280\n",
+       "4              0          4  3.261036  1.187654\n",
        "...          ...        ...       ...       ...\n",
-       "99995        999         95  0.151321  0.097253\n",
-       "99996        999         96  0.160716  0.090478\n",
-       "99997        999         97  0.173965  0.086543\n",
-       "99998        999         98  0.189533  0.085705\n",
-       "99999        999         99  0.205392  0.088117\n",
+       "99995        999         95  3.565728  2.291671\n",
+       "99996        999         96  3.787127  2.132025\n",
+       "99997        999         97  4.099317  2.039314\n",
+       "99998        999         98  4.466160  2.019556\n",
+       "99999        999         99  4.839878  2.076386\n",
        "\n",
        "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,15 +592,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max value registered for prey (scaled): 2.3062122\n",
-      "Max value ragistered for predator (scaled): 0.80036825\n"
+      "Max value registered for prey (scaled): 54.343708\n",
+      "Mean value registered for prey (scaled): 6.716232\n",
+      "Max value registered for predator (scaled): 18.85992\n",
+      "Mean value registered for predator (scaled): 2.2528565\n"
      ]
     }
    ],
@@ -607,7 +611,9 @@
     "predator_array_scaled = df_traj_scaled['predator'].to_numpy()\n",
     "\n",
     "print('Max value registered for prey (scaled):', max(prey_array_scaled))\n",
-    "print('Max value ragistered for predator (scaled):', max(predator_array_scaled))"
+    "print('Mean value registered for prey (scaled):', np.mean(prey_array_scaled))\n",
+    "print('Max value registered for predator (scaled):', max(predator_array_scaled))\n",
+    "print('Mean value registered for predator (scaled):', np.mean(predator_array_scaled))\n"
    ]
   },
   {
