Calculated the number of flops apptox 10^15, this is too much for just baseline, I need to cut it down a bit, I need to go back to it but for now I will focus on LoRA

--- a/Baseline_2.ipynb
+++ b/Baseline_2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,11 +38,11 @@
      "text": [
       "/root/Document/Term2/M2/M2_Cw/m2_venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2025-03-18 19:17:57.248304: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-03-19 19:09:13.178799: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1742325477.266238   12067 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1742325477.270554   12067 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-03-18 19:17:57.296015: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1742411353.266069   52048 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1742411353.291922   52048 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-03-19 19:09:13.504334: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "Sliding Window Attention is enabled but not implemented for `sdpa`; unexpected results may be encountered.\n"
      ]
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
        "Values outside the range 0-1                 77.31%  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -801,20 +801,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 9707,    11,  1879,     0, 20166,   311,   279,   220,    17,    15,\n",
-       "            16,    21,    12,    17,    15,    16,    22, 14250,  1042,    13,\n",
-       "          1634,   264,  4462,   315,   279,  3942,   518,   547,  4897,    11,\n",
-       "           358,   614,  1012,  6398,   304,  1657,  2155,  5510,   323,   369,\n",
-       "          5257,  7966,    13,  1096,   374,   847,  1156,   882,  1660,   949]])"
+       "tensor([[ 9707,    11,  1879,     0,  2585,   646,   358,  1492,   498,  3351,\n",
+       "            30,  5209,  3410,   752,   448,   279,  5871,  1995,   311,  7789,\n",
+       "           498,    13,  3555,  1035,   498,  1075,   311,  1414,   476,   653,\n",
+       "          1939,  2121,   458, 15235,  4128,  1614,    11,   358,  1513,   944,\n",
+       "           614,   264,  6961,  9362,   323,  4157, 16282,  5961,   448,  3847]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,14 +839,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, world! Welcome to the 2016-2017 academic year. As a member of the community at UBC, I have been involved in many different ways and for various reasons. This is my first time being part\n"
+      "Hello, world! How can I help you today? Please provide me with the necessary information to assist you. What would you like to know or do?\n",
+      "\n",
+      "As an AI language model, I don't have a physical presence and cannot interact directly with users\n"
      ]
     }
    ],
@@ -872,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1076,14 +1078,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_12067/2856005867.py:5: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/tmp/ipykernel_52048/2856005867.py:5: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  df_sub_traj_scaled = df_filtered.groupby('system_id').apply(lambda x: x.iloc[:-50]).reset_index(drop=True)\n"
      ]
     }
@@ -1108,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,6 +1608,122 @@
    ],
    "source": [
     "plot_pred_vs_true(my_decoded_predictions, traject_scaled_string, 5)# Plotting predicted vs true values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Floating Point Operators (FLOPS for Baseline)\n",
+    "\n",
+    "This section aims to provide an estimate of the total number of FLOPS utilised for Baseline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FLOPS Part 2(a):\n",
+    "- Scaling and Rounding of time series data\n",
+    "- Tokenisation of numeric sequence\n",
+    "- String conversion (prey, predator values into text format)\n",
+    "\n",
+    "All the above FLOPS calculations are not provided, as according to the project instructions, hence we are invited to neglect them. What we should focus on instead is, determining the number of FLOPS for ML models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FLOPS Part 2(b)\n",
+    "\n",
+    "For part 2(b), we need to consider the following calculation:\n",
+    "-\tOnly Forward Pass (we are feeding tokens to an untrained model)\n",
+    "-\tNo gradients, no backpropagation, no optimiser steps\n",
+    "\n",
+    "\n",
+    "For each token generated, the FLOPS of the forward pass can be estimated as\n",
+    "$$\n",
+    "\\text{FLOPs per token} = \\text{num\\_layers} \\times \\left(\\text{Attention FLOPs} + \\text{Feedforward FLOPs} + \\text{Normalization FLOPs} \\right)\n",
+    "$$\n",
+    "Where:\n",
+    "\n",
+    "- i. Self-Attention FLOPS is conmputed as\n",
+    "    $$\n",
+    "    \\text{num\\_heads} \\times \\text{seq\\_length} \\times d_{\\text{model}} \\times (2d_{\\text{model}} - 1)\n",
+    "    $$\n",
+    "\n",
+    "- ii. Feedforward FLOPS are computed as\n",
+    "    $$\n",
+    "    2 \\times \\text{seq\\_length} \\times d_{\\text{model}} \\times (2d_{\\text{model}} - 1)\n",
+    "    $$\n",
+    "\n",
+    "- iii. Total number of FLOPS per step is computed by multiplying by `num_kayers` and the total number of tokens generated.\n",
+    "\n",
+    "These considerations are all implemented with the function `compute_generation_flops`, imported from the `flops.py` located in the directory `src`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of attention heads: 14\n",
+      "Number of hidden dimensions: 896\n",
+      "Number of Transformer layers: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract model parameters\n",
+    "num_heads = model.config.num_attention_heads\n",
+    "d_model = model.config.hidden_size\n",
+    "num_layers = model.config.num_hidden_layers\n",
+    "\n",
+    "print(f\"Number of attention heads: {num_heads}\")\n",
+    "print(f\"Number of hidden dimensions: {d_model}\")\n",
+    "print(f\"Number of Transformer layers: {num_layers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.flops import compute_generation_flops # import required function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of FLOPS utilised for Baseline part 2(b): 78407988019200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Computing number of flops for part 2(b)\n",
+    "\n",
+    "total_flops_2b = compute_generation_flops(input_ids_list, max_lengths)\n",
+    "\n",
+    "print('Total number of FLOPS utilised for Baseline part 2(b):', total_flops_2b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see from the above output, the total number of FLOPS for just this section is approximately $8\\times 10^{13}$. Which is way to much for this part of the project. I might have to cut it down a little!"
    ]
   }
  ],
