--- a/Baseline.ipynb
+++ b/Baseline.ipynb
@@ -48,6 +48,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ensure reproducibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "# Set seed\n",
+    "torch.manual_seed(23)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -270,40 +288,6 @@
    "metadata": {},
    "source": [
     "We defined the function `sequence_length_array`, to determine the maximum token lenght of each tokenised system. This will be useful when setting `max_length` in `model`. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sequence_length_array(tokenized_string):\n",
-    "    \"\"\"\n",
-    "    Computes the sequence lengths for a list of tokenized inputs.\n",
-    "\n",
-    "    This function takes a list of tokenized input dictionaries (as returned by a Hugging Face tokenizer \n",
-    "    with `return_tensors=\"pt\"`), and extracts the length (number of tokens) for each input sequence.\n",
-    "\n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    tokenized_string : list of dict\n",
-    "        A list where each item is a dictionary containing tokenized data with at least the key \n",
-    "        'input_ids', whose value is a tensor of shape (1, sequence_length).\n",
-    "\n",
-    "    Returns:\n",
-    "    --------\n",
-    "    max_lengths : np.ndarray\n",
-    "        A 1D NumPy array containing the sequence lengths (number of tokens) for each input.\n",
-    "\n",
-    "    Example:\n",
-    "    --------\n",
-    "    >>> tokenizer = AutoTokenizer.from_pretrained(\"Qwen/Qwen2.5-0.5B-Instruct\")\n",
-    "    >>> encoded = [tokenizer(text, return_tensors=\"pt\") for text in text_list]\n",
-    "    >>> lengths = sequence_length_array(encoded)\n",
-    "    \"\"\"\n",
-    "    max_lengths = np.array([entry[\"input_ids\"].shape[1] for entry in tokenized_string])\n",
-    "    return max_lengths"
    ]
   },
   {
@@ -597,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Savinf MSE results"
+    "Save MSE results"
    ]
   },
   {
@@ -606,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.save(\"MSE_values_2b\", np.array(MSE_values))"
+    "#np.save(\"untrained_qwen_results/MSE_values_2b\", np.array(MSE_values))"
    ]
   },
   {
@@ -618,11 +602,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MSE_loaded = np.load(\"MSE_values_2b.npy\")"
+    "MSE_loaded = np.load(\"untrained_qwen_results/MSE_values_2b.npy\")"
    ]
   },
   {
@@ -648,10 +632,10 @@
     "RMSE_values = np.sqrt(MSE_values)\n",
     "\n",
     "#Saving results\n",
-    "#np.save('RMSE_values_2b', RMSE_values)\n",
+    "#np.save('untrained_qwen_results/RMSE_values_2b', RMSE_values)\n",
     "\n",
     "# Load back if necessary\n",
-    "# RMSE_loaded = np.load(\"RMSE_values_2b.npy\")"
+    "# RMSE_loaded = np.load(\"untrained_qwen_results/RMSE_values_2b.npy\")"
    ]
   },
   {
@@ -762,7 +746,7 @@
     "print('Length of error_per_system:',len(error_per_system))\n",
     "\n",
     "# Saving system as \n",
-    "#np.savez(\"error_per_system.npz\", *error_per_system)"
+    "#np.savez(\"untrained_qwen_results/error_per_system.npz\", *error_per_system)"
    ]
   },
   {
