progessing with hp

--- a/training_lora_3a_5000.ipynb
+++ b/training_lora_3a_5000.ipynb
@@ -710,10 +710,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez(\"trained_lora_part_3a/predictions_decoded_trained_lora_3a.npz\", *predictions_decoded)\n",
-    "MSE_loaded = np.save(\"trained_lora_part_3a/MSE_values_3a.npy\", np.array(MSE_values))\n",
-    "np.save('trained_lora_part_3a/RMSE_values_3a', RMSE_values)\n",
-    "np.savez(\"trained_lora_part_3a/error_per_system_5000.npz\", *error_per_system)"
+    "#np.savez(\"trained_lora_part_3a/predictions_decoded_trained_lora_3a.npz\", *predictions_decoded)\n",
+    "#MSE_loaded = np.save(\"trained_lora_part_3a/MSE_values_3a.npy\", np.array(MSE_values))\n",
+    "#np.save('trained_lora_part_3a/RMSE_values_3a', RMSE_values)\n",
+    "#np.savez(\"trained_lora_part_3a/error_per_system_5000.npz\", *error_per_system)"
    ]
   },
   {
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -823,6 +823,17 @@
      "output_type": "stream",
      "text": [
       "Total number of estimated FLOPs for training LoRA with 5000 steps: 5983174656000000\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
