--- a/training_lora_3b_ht.ipynb
+++ b/training_lora_3b_ht.ipynb
@@ -115,7 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_,tokenizer = load_qwen()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, val_texts, _ = load_and_preprocess(\"data/lotka_volterra_data.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,22 +142,6 @@
      "text": [
       "\n",
       "Training with r=2, lr=1e-05\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Steps 0:   0%|          | 4/1142 [00:33<2:40:42,  8.47s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "→ final loss: 1.1457\n",
-      "\n",
-      "Training with r=2, lr=5e-05\n"
      ]
     },
     {
@@ -166,17 +168,111 @@
     "        print(f\"\\nTraining with r={r}, lr={lr}\")\n",
     "\n",
     "        # Load fresh model\n",
-    "        model, tokenizer = load_qwen()\n",
+    "        model, _ = load_qwen()\n",
     "        trained_model, final_loss = train_lora_model(model, tokenizer, lora_rank=r, learning_rate=lr, train_steps=500)\n",
     "\n",
-    "        results.append({\"rank\": r, \"learning_rate\": lr, \"final_loss\": final_loss})\n",
-    "        print(f\"→ final loss: {final_loss:.4f}\")\n",
+    "        val_loss, _ = evaluate_loss_perplexity_val(trained_model, tokenizer, val_texts, 4)\n",
+    "\n",
+    "        results.append({\"rank\": r, \"learning_rate\": lr, \"Train Loss\": final_loss, \"Validation Loss\": val_loss})\n",
+    "        print(f\"-> Train loss: {final_loss:.4f}\")\n",
+    "        print(f\"-> Validation loss: {val_loss:.4f}\")\n",
     "\n",
     "        # Clean up to free GPU memory\n",
     "        del model\n",
     "        del trained_model\n",
     "        torch.cuda.empty_cache()\n",
     "        gc.collect()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "HP_search_results_df = pd.DataFrame(results)\n",
+    "print(HP_search_results_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After determining best hyper parameters for \"rank\" and \"learning rate\", we can procede to determine which of the three context lengths $[128, 512, 768]$ perform the best for a maximun of 2000 RLPPP steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_r = 4\n",
+    "best_lr = 5e-5\n",
+    "train_steps = 500  # or whatever RLPPP is\n",
+    "\n",
+    "context_lengths = [128, 512, 768]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Option 1, context lengths = 128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, _ = load_qwen()\n",
+    "trained_model, final_loss = train_lora_model(model, tokenizer, lora_rank=r, learning_rate=lr, max_ctx_length=128, train_steps=1000)\n",
+    "loss_val, _ = evaluate_loss_perplexity_val(trained_model, tokenizer, val_texts, 4)\n",
+    "print(f\"-> Train loss: {final_loss:.4f}\")\n",
+    "print(f\"-> Validation loss: {loss_val:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Option 1, context lengths = 512"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, _ = load_qwen()\n",
+    "trained_model, final_loss = train_lora_model(model, tokenizer, lora_rank=r, learning_rate=lr, train_steps=1000) # Default max_ctx_length=512\n",
+    "loss_val, _ = evaluate_loss_perplexity_val(trained_model, tokenizer, val_texts, 4)\n",
+    "print(f\"-> Train loss: {final_loss:.4f}\")\n",
+    "print(f\"-> Validation loss: {loss_val:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Option 1, context lengths = 768"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, _ = load_qwen()\n",
+    "trained_model, final_loss = train_lora_model(model, tokenizer, lora_rank=r, learning_rate=lr, max_ctx_length=127688, train_steps=1000)\n",
+    "loss_val, _ = evaluate_loss_perplexity_val(trained_model, tokenizer, val_texts, 4)\n",
+    "print(f\"-> Train loss: {final_loss:.4f}\")\n",
+    "print(f\"-> Validation loss: {loss_val:.4f}\")"
    ]
   }
  ],
